[PRMT-1162] Changed presignedUrl to currentEhrUrl in health-record-transfers and updated swagger
